<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jason.comp3717midtermpractice.MainActivity">

    <Button
        android:text="@string/spinnerActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CoinActivityButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/SpinnerActivityButton"
        android:onClick="goToSpinner"/>

    <Button
        android:text="@string/coinActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CoinActivityButton"
        android:onClick="goToCoinFlip"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/SpinnerActivityButton"
        android:layout_alignStart="@+id/SpinnerActivityButton"
        android:layout_marginTop="10dp" />

    <Button
        android:text="@string/sqlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SpinnerActivityButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:id="@+id/sqlButton"
        android:onClick="goToSQL"/>
</RelativeLayout>
